<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="48dp"
    android:paddingTop="48dp"
    android:paddingEnd="48dp"
    tools:context=".fragments.LivenessInstructionsFragment">
    <LinearLayout
        android:id="@+id/instructions_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        android:visibility="gone"
        >

        <TextView
            android:id="@+id/instructions_textview_loading"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:gravity="center"
            android:keepScreenOn="true"
            android:text="Obrigado! \n\n Estamos processando seus dados..."
            android:textColor="@color/red_color_th"
            android:textSize="30sp"
            android:layout_margin="30sp"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/instructions_content_loading"
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:contentDescription="Loading"
            android:src="@drawable/loading_png"


            >


        </ImageView>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/instructions_texts"
        android:visibility="visible"
        >
        <TextView
            android:id="@+id/instructions_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/instructions"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/instructions_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructions_text_view"
            tools:itemcount="5"
            tools:listitem="@layout/instruction_item_list_view" />

        <Button
            android:id="@+id/auto_capture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green_th"
            android:text="@string/auto_capture"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructions_recycler_view"
            android:width="250dp"/>

        <Button
            android:id="@+id/manual_capture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="72dp"
            android:backgroundTint="@color/green_th"
            android:text="@string/manual_capture"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/auto_capture"
            android:width="250dp"
            android:visibility="gone"
            />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="148dp"
            android:visibility="gone"
            android:layout_marginEnd="104dp"
            android:layout_marginBottom="56dp"
            android:src="@drawable/check_circle_outline"
            app:layout_constraintBottom_toTopOf="@+id/auto_capture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent"


            />
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>